objects/Oracle_Task_Expenses__c.object
<CustomObject>
    <description>Expenses tied to Oracle Projects</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Incurred__c</fullName>
        <label>Date Incurred</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incurred_By__c</fullName>
        <label>Incurred By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Id__c</fullName>
        <label>Invoice Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Line_Number__c</fullName>
        <label>Invoice Line Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Project_Task__c</fullName>
        <label>Oracle Project Task</label>
        <referenceTo>Oracle_Project_Task__c</referenceTo>
        <relationshipLabel>Oracle Task Expenses</relationshipLabel>
        <relationshipName>Oracle_Task_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Oracle_Task_Expense_Id__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Task Expense Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Oracle Task Expense</label>
    <nameField>
        <label>Oracle Task Expenses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oracle Task Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>